增加了图片预加载功能
增加了图片预加载功能

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -62,6 +62,7 @@ input{
   background-image: url(../images/bg2.png);
   position: relative;
   float: left;
+  display: none;
 }
 .item .item-image{
   display: block;
