--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,6 +6,8 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <script src="/javascripts/jquery.min.js"></script>
     <script src="/javascripts/bootstrap.min.js"></script>
+    <script src="/javascripts/jquery.easing.min.js"></script>
+    <script src="/javascripts/jquery.fadeloader.js"></script>
     <script type="text/javascript" src="/javascripts/script.js"></script>
 </head>
 <body>
