--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <div class="main-container">
     <div class="masonry-container" id="masonry-container">
         <% images.forEach(function(image, index){ %>
-        <div class="item">
+        <div class="item a">
             <div class="item-modal mBtn item-image" data-toggle="modal" data-target="#myModal" id="modal-btn">
                 <img src="<%= image.imagePath %>" data-imgname="<%= image.imageName %>">
             </div>
