--- a/views/info.ejs
+++ b/views/info.ejs
@@ -26,7 +26,7 @@
         </div>
         <div class="info-tags">
             <% images.forEach(function(imgs, index){ %>
-            <div class="item">
+            <div class="item a">
                 <div class="item-modal mBtn item-image" data-toggle="modal" data-target="#myModal" id="modal-btn">
                     <img src="<%= imgs.imagePath %>" data-imgname="<%= imgs.imageName %>">
                 </div>
