--- a/views/tag.ejs
+++ b/views/tag.ejs
@@ -2,7 +2,7 @@
 <div class="main-container">
     <div class="masonry-container">
         <% tags.forEach(function(tag, index){ %>
-        <div class="item">
+        <div class="item a">
             <div class="item-modal mBtn item-image" data-toggle="modal" data-target="#myModal" id="modal-btn">
                 <img src="<%= tag.imagePath %>" data-imgname="<%= tag.imageName %>">
             </div>
