--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,7 @@ body {
   margin: 0;
   background: #e9e9e9;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 14px;
   -webkit-transition: all 200ms ease-in;
   -moz-transition: all 200ms ease-in;
   -o-transition: all 200ms ease-in;
@@ -19,7 +20,6 @@ input{
   outline: none;
 }
 .header{
-  display: none;
   height: 54px;
   width:100%;
   position: fixed;
@@ -28,10 +28,21 @@ input{
   right: 0;
   padding-top: 10px;
   box-shadow: 0 1px 2px 0 rgba(0,0,0,0.22);
-  background-image: url('../images/bg1.png');
-  background-color: #364050;
+  background-color: #ffffff;
   z-index: 800;
 }
+.btn-orange {
+  background-color: rgba(255,105,31,.8);
+  color: #ffffff;
+  transition: all 300ms ease-in;
+}
+.btn-orange:hover {
+  background-color: #ff691f;
+  color: #ffffff;
+}
+
+
+
 .logo{
   background-image: url("../images/logo.png");
   display: block;
@@ -40,9 +51,8 @@ input{
 }
 .main-container {
   padding: 55px 20px;
-  background-color: #e8e8e8;
-  background-image: url('../images/bg2.png');
   min-height: 612px;
+  background-color: #ffffff;
 }
 .headerContainer-left{
   width:80%;
@@ -53,6 +63,11 @@ input{
   float: left;
   padding-left: 2em;
 }
+.userinfo-item {
+  margin-left: 1em;
+}
+
+
 #tag-container{
   width: 80%;
   margin: 0 auto;
@@ -82,32 +97,31 @@ input{
 }
 
 .masonry-container{
-  /*width: 80%;*/
+  width: 85%;
   margin: 0 auto;
 }
 .clear{
   clear: both;
 }
 .item{
-  width: 224px;
-  margin: 14px 10px 0 10px;
-  /*border-radius: 6px;*/
-  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.22);
-  background-color: white;
-  background-image: url(../images/bg2.png);
-  position: relative;
+  width: 238px;
   float: left;
-  display: none;
+  margin: 14px 0 0 15px;
+  padding: 15px;
+  background-color: white;
+  position: relative;
+  border-radius: 5px;
+  transition: all 200ms ease-in;
 }
-.item .item-image{
+.item:hover {
+  background-color: #f3f3f3;
+}
+.item-image{
   display: block;
-  height: 180px;
-  overflow: hidden;
   position: relative;
   cursor: pointer;
-}
-.item-image img{
-  position: absolute;
+  border-radius: 5px;
+  overflow: hidden;
 }
 .item .remove{
   position: absolute;
@@ -122,16 +136,13 @@ input{
   width: 100%;
 }
 .item-wrap{
-  padding: 5px 10px 5px 10px;
+  padding: 5px 10px 0 10px;
   font-size: 12px;
-  border-bottom: 1px solid rgb(231, 231, 231);
-  height: 42px;
   overflow: hidden;
 }
 .item-user{
   display: block;
   padding: .5em;
-  border-bottom: 1px solid rgb(231, 231, 231);
   color: rgb(119, 119, 119);
   font-size: 16px;
   font-weight: 500;
@@ -146,12 +157,17 @@ input{
   color: rgb(119, 119, 119);
 }
 .item-from{
-  padding: 5px 10px 5px 10px;
   color: #b0b0b0;
+  padding: .4em .8em 0 .8em;
+  font-size: .8em;
+}
+.item-from span {
+  color: #ff691f;
 }
 .item-from a{
   color: #b0b0b0;
   font-weight: 600;
+  margin-left: .2em;
 }
 
 .footer-buttons{
@@ -194,12 +210,10 @@ input{
   padding: 10px;
   width: 100%;
   background-color: white;
-  background-image: url(../images/bg2.png);
 }
 .user-title{
   height: 80px;
   background-color: white;
-  background-image: url(../images/bg2.png);
   padding: 0 20px 0 20px;
 }
 .user-title-info{
@@ -211,7 +225,6 @@ input{
 }
 .user-text{
   background-color: white;
-  background-image: url(../images/bg2.png);
   padding: 0 20px 0 20px;
   box-shadow: 0 1px 2px 0 rgba(0,0,0,0.22);
 }
@@ -234,27 +247,22 @@ input{
 /*info页面*/
 .info-item{
   margin: 14px 7px 0 20px;
-  width: 400px;
+  width: 30%;
   border-radius: 6px;
-  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.22);
+  overflow: hidden;
   background: #ffffff;
-  overflow-x: auto;
-  overflow-y: scroll;
   position: fixed;
-  top: 50px;
-  left: 0;
-  bottom: 10px;
-  display: none;
 }
 .info-item img{
   width:100%;
 }
-.info-tags{
-  margin: 14px 7px 0 430px;
+.info-tagcon {
   float: left;
+  width: 65%;
+  margin-left: 35%;
 }
-.info-tags .item {
-  width: 250px;
+#info-tags{
+  width: 100%;
 }
 
 .modal-body-img{
