--- a/views/search.ejs
+++ b/views/search.ejs
@@ -2,7 +2,7 @@
 <div class="main-container">
     <div class="masonry-container">
         <% searchs.forEach(function(search, index){ %>
-        <div class="item b">
+        <div class="item">
             <div class="item-modal mBtn item-image" data-toggle="modal" data-target="#myModal" id="modal-btn">
                 <img src="<%= search.imagePath %>" alt="">
             </div>
