--- a/views/history.ejs
+++ b/views/history.ejs
@@ -49,7 +49,7 @@
                 <%= his.info %>
             </div>
             <div class="item-from">
-                来自于
+                <span class="glyphicon glyphicon-tags"></span>
                 <% his.tag.forEach(function(tg, index){ %>
                 <% if (tg) { %>
                 <a href="/tags/<%= tg %>"><%= tg %></a>
