--- a/views/tag.ejs
+++ b/views/tag.ejs
@@ -23,7 +23,7 @@
                 <%= tag.info %>
             </div>
             <div class="item-from">
-                来自于
+                <span class="glyphicon glyphicon-tags"></span>
                 <% tag.tag.forEach(function(tg, index){ %>
                 <% if (tg) { %>
                 <a href="/tags/<%= tg %>"><%= tg %></a>
