--- a/views/header.ejs
+++ b/views/header.ejs
@@ -23,14 +23,14 @@
     <strong><%= error %></strong>
 </div>
 <% } %>
-<div class="header">
+<div id="header">
     <div class="container">
-        <div class="headerContainer-left">
+        <div id="headerContainer-left">
             <form action="/search" method="get">
                 <div class="input-group">
-                    <span class="input-group-addon" id="basic-addon1"><a class="logo" href="/"></a> </span>
-                    <input type="text" class="form-control" placeholder="Search" aria-describedby="basic-addon1" name="keyword">
-                    <span class="input-group-addon" id="basic-addon1">
+                    <span class="input-group-addon headerContainer-span" id="basic-addon1"><a class="logo" href="/"></a> </span>
+                    <input type="text" class="form-control header-lg" placeholder="Search" aria-describedby="basic-addon1" name="keyword">
+                    <span class="input-group-addon headerContainer-span" id="basic-addon1">
                         <span id="imgSearch" class="glyphicon glyphicon-picture" aria-hidden="true"></span>
                     </span>
                 </div>
@@ -42,7 +42,66 @@
                             <input type="file" class="upload-pic" name="imgsearch" id="uploadInput">
                             <span class="upload-text" id="uploadSpan">本地上传图片</span>
                         </div>
-                        <button class="btn btn-info upload-submit" type="submit">搜索</button>
+                        <button class="btn btn-orange upload-submit" type="submit">搜索</button>
+                    </form>
+                </div>
+                <a class="upload-remove btn btn-danger" id="upload-remove">
+                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                </a>
+            </div>
+        </div>
+        <div class="headerContainer-right">
+            <% if (user) { %>
+            <div class="userinfo">
+                <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-big btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <span class="glyphicon glyphicon-user"></span>
+                    </button>
+                    <ul class="dropdown-menu" role="menu">
+                        <li><a href="/u/<%= user._id %>">查看信息</a></li>
+                        <li><a href="/logout">退出</a> </li>
+                    </ul>
+                </div>
+                <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-big btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
+                    </button>
+                    <ul class="dropdown-menu">
+
+                    </ul>
+                </div>
+                <a class="btn btn-big btn-orange" id="tag-bar">分类</a>
+            </div>
+            <% } else  { %>
+            <div class="userinfo">
+                <a href="/login" class="btn btn-orange">登录</a>
+                <a href="/signup" class="btn btn-default">注册</a>
+            </div>
+            <% } %>
+        </div>
+        <div class="clear"></div>
+    </div>
+</div>
+<div id="header-scroll">
+    <div class="container">
+        <div id="headerContainer-left">
+            <form action="/search" method="get">
+                <div class="input-group">
+                    <span class="input-group-addon headerContainer-span" id="basic-addon1"><a class="logo" href="/"></a> </span>
+                    <input type="text" class="form-control" placeholder="Search" aria-describedby="basic-addon1" name="keyword">
+                    <span class="input-group-addon headerContainer-span" id="basic-addon1">
+                        <span id="imgSearch" class="glyphicon glyphicon-picture" aria-hidden="true"></span>
+                    </span>
+                </div>
+            </form>
+            <div id="upload">
+                <div class="upload-info">
+                    <form method="post" action="/imgsearch" enctype='multipart/form-data'>
+                        <div class="upload-wrap">
+                            <input type="file" class="upload-pic" name="imgsearch" id="uploadInput">
+                            <span class="upload-text" id="uploadSpan">本地上传图片</span>
+                        </div>
+                        <button class="btn btn-orange upload-submit" type="submit">搜索</button>
                     </form>
                 </div>
                 <a class="upload-remove btn btn-danger" id="upload-remove">
@@ -74,8 +133,8 @@
             </div>
             <% } else  { %>
             <div class="userinfo">
-                <a href="/login" class="btn btn-orange">登录</a>
-                <a href="/signup" class="btn btn-default">注册</a>
+                <a href="/login" class="btn btn-big btn-orange">登录</a>
+                <a href="/signup" class="btn btn-big btn-default">注册</a>
             </div>
             <% } %>
         </div>
@@ -100,7 +159,7 @@
                 <input type="file" class="upload-pic" name="fulAvatar" id="newInput">
                 <span class="upload-text" id="newSpan">本地上传图片</span>
             </div>
-            <button class="btn btn-info upload-submit" type="submit">创建</button>
+            <button class="btn btn-orange upload-submit" type="submit">创建</button>
         </form>
     </div>
     <a class="upload-remove btn btn-danger" id="new-remove">
