--- a/views/user.ejs
+++ b/views/user.ejs
@@ -31,20 +31,16 @@
 </div>
 <div class="main-container">
     <div class="masonry-container">
-        <% images.forEach(function(image, index){ %>
+        <% images.forEach(function(image) { %>
         <div class="item">
             <% if (image.name == user.name) { %>
-            <a href="/remove/<%= user.name %>/<%= image._id %>" class="remove btn btn-default"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a>
+            <a href="/remove/<%= image._id %>" class="remove btn btn-default"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a>
             <% } %>
             <a href="/info/<%= image.imageName %>" class="item-image"><img src="<%= image.imagePath %>" alt=""></a>
             <div class="item-user">
                 <a><%= image.name %></a>
             </div>
-            <% if (!image.info) { %>
-            <div class="item-from">
-                请您点击<a href="/<%= user.name %>/edit/<%= image.imageName %>"><i>编辑</i></a> 进行编辑!
-            </div>
-            <% } else { %>
+
             <div class="item-wrap">
                 <%= image.info %>
             </div>
@@ -56,7 +52,7 @@
                 <% } %>
                 <% }) %>
             </div>
-            <% } %>
+
         </div>
         <% }) %>
 
