--- a/views/search.ejs
+++ b/views/search.ejs
@@ -2,7 +2,7 @@
 <div class="main-container">
     <div class="masonry-container">
         <% searchs.forEach(function(search){ %>
-        <div class="item" data-src="<%= search.imagePath%>">
+        <div class="item" data-src="<%= search.imagePath%>" data-id="<%= search._id %>">
             <div class="item-modal mBtn item-image" data-toggle="modal" data-target="#myModal" id="modal-btn">
 
             </div>
@@ -40,7 +40,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-                <a href="" class="btn btn-primary">查看相似</a>
+                <a href="" class="btn btn-orange" id="md-vi">查看相似</a>
             </div>
         </div>
     </div>
