修改了部分bug。

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,6 +40,7 @@
         <div class="modal-content">
             <div class="modal-body">
                 <img class="modal-body-img" id="md-by" src="" alt="">
+                <div class="modal-body-info" id="md-info"></div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
