--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -105,7 +105,6 @@ input{
   position: relative;
   box-shadow: 0 1px 2px 0 rgba(0,0,0,0.22);
   background-color: white;
-  background-image: url(../images/bg2.png);
 }
 .tag .tag-info{
   display: block;
@@ -266,13 +265,13 @@ input{
 .info-item{
   margin: 14px 7px 0 20px;
   width: 30%;
-  border-radius: 6px;
   overflow: hidden;
   background: #ffffff;
   position: fixed;
 }
 .info-item img{
   width:100%;
+  border-radius: 6px;
 }
 .info-tagcon {
   float: left;
@@ -285,6 +284,11 @@ input{
 
 .modal-body-img{
   width: 100%;
+  border-radius: 5px;
+  border: solid 1px rgba(255,105,31,.8);
+}
+.modal-body-info {
+  margin: .5em;
 }
 
 .thumbnail img{
